--- a/views/index.erb
+++ b/views/index.erb
@@ -1,10 +1,16 @@
 <html>
   <head></head>
   <body>
-    <p>Your secret number is <%= session["number"] %></p>
+    <h4><%= message %></h4>
+    <p>The Secret Number is <%= session["number"] %></p>
   </body>
 </html>
 
+
+<form>
+  <input type='text' name='guess' />
+  <input type='submit' value='Guess!' />
+</form>
 
 
 
