added colors to html background depending on guess

--- a/views/index.erb
+++ b/views/index.erb
@@ -1,6 +1,22 @@
+
 <html>
-  <head></head>
-  <body>
+  <head>
+    <style>
+
+    #red{
+      background: red;
+    }
+
+    #white{
+      background: white;
+    }
+
+    #green{
+      background: green;
+    }
+    </style>
+  </head>
+  <body id=<%=id%>>
     <h4><%= message %></h4>
     <p>The Secret Number is <%= session["number"] %></p>
   </body>
